--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-certifi==2019.9.11
 chardet==3.0.4
 idna==2.8
 oauthlib==3.1.0
@@ -8,3 +7,5 @@ requests-oauthlib==1.3.0
 six==1.13.0
 tweepy==3.8.0
 urllib3==1.25.7
+certifi==2019.9.11
+pathlib
